# cpp-app-library-sample

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  main.cu
app/src/: main.cpp  main.cu  main_cuda.h
cmake/: runtime_deps.cmake
